--- a/.github/workflows/fod-sast-scan.yml
+++ b/.github/workflows/fod-sast-scan.yml
@@ -26,13 +26,13 @@ jobs:
         # run: >
         #  token=$(
         #    curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' 
-        #    --header 'Authorization: Bearer gAAAADjR3IxzZmi4utyJeS9IzeLeKHkOGIO-7GCAyqiQc6EPBaGegY4hLEFkyz8uiGyj6wl42pYHrIVrjU1T97lHascY9hATRYGkuPa02PRWnly7MdIxX__WSpjckco9rG-zGQZ4xWx_U-e8TTn3BpPaWPccqav0I3cA2bPrLXtD-XQ1VAMAAIAAAAARDcespuJb39R1Oc-AbpfB6yw2aNfB4HWDSs_-B3po-RLQCFSbZGKt2xtUqCRPqVX5NRkwEh1pXr3upUsj_MnMju5CFmX2m-SQg1rw2NGN4Fr2ROP7RwZzaT_vHn3By3F0krmy3AIchupPogh9cFrHCooh8pV9pnsz0uFAD9WexhtBRVagsZZVAEsyhRbF7JPEI4EJ8R3Mqi5XizAodsyD9Je2Vg9Q7W3IQZEdRSqq4sCsAhcTq0qZ8qyiftGV9yg2tkZJ-r3u9Xu2a99yB0ToUcCUfjO5dVnmGAxKvF6lkL6ZLN3BxEhQ_KCzrz07GYtN5fDQi3do6SF64UncqTjCx-KDBynfE1780w3RO_1fwGTpCMFA6VKBylc1GfHu9pEwUj7ylQlsJG9QBwaZNxFCfs9reEZMUibZbNiLJTX5y42ftCTlwFkZeRAHfcwSe_UwoTf7DztbrARNJDcCJtmUy95DpIsH6_5YjmHNzQrj-N3lWiOAHiJNPhRs6YAFsk0qg6obHukKe1gShcjj7ZbH82HuBsoStI3lk5_NPSaZLCgQZr8t_qJx37ufj-SGIFuspY-F23HursaCmmZCLYNXXLHbR9p5bXxPr_TpkUxxgzwN3WdOsSFEsyLxYct17Gjoc5sVhSk9ZRLRIdglLn5Y42GzEEomENTtDPNJ443H-DuctPS13OH6gOMkS8XvvjsMix0MPnxquRMqq8WKaQ6qtswaWv8M0z6Yebg4UZ4Ys6pKJNI4kfnUWNFy20CVW6oQUd9vsx8_JLWKrlk3Ltaj_8uyHW0FNBG690e-_roMpEJOfNWO2b5UoXsX3B5xcdiS5-iOoy_5CijPXy8mkQM3flkj0xyK6nIFJMoVuBPKfmww6QC-LH8sXb3VsqXN4hhdX8gm6YcDGp21Gu3tPmV-vWk1VwwSyomu7pzt887RVydDOk0orLenH-ZWEkifb0llItbukK2cX7IG1-8YuQloiLMKK27LnwH7p70uKYHbw9Fxq-JSxOpjBiHCgY4je_4PhmmgpdEt7AQm2PMXscO0lyVNz6FuC5QK6F0tJj5NwWlLnsyGtAJSU_hGLVPq4BBq0dxaQ0E4f3sMyo9FIvHYKiAxua7PU089WioY77_Mew' 
+        #    --header 'Authorization: Bearer <auth_token>' 
         #    -d '{
-        #      "applicationId": 154817,
-        #      "releaseName": "Test_Game_One",
-        #      "releaseDescription": "The First Game",
+        #      "applicationId": <application_id>,
+        #      "releaseName": <release_name>,
+        #      "releaseDescription": <release_description>,
         #      "copyState": true,
-        #      "copyStateReleaseId": 803401, 
+        #      "copyStateReleaseId": <release_id_to_copy_state_from>,
         #      "sdlcStatusType": "Production"
         #    }'
         #    'https://api.ams.fortify.com/api/v3/releases'
@@ -41,6 +41,13 @@ jobs:
         #  && echo "release_id=$token" >> "$GITHUB_ENV"
         #  && echo ${{ env.release_id }}
         run: |
-          token=$( curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'Authorization: Bearer gAAAADjR3IxzZmi4utyJeS9IzeLeKHkOGIO-7GCAyqiQc6EPBaGegY4hLEFkyz8uiGyj6wl42pYHrIVrjU1T97lHascY9hATRYGkuPa02PRWnly7MdIxX__WSpjckco9rG-zGQZ4xWx_U-e8TTn3BpPaWPccqav0I3cA2bPrLXtD-XQ1VAMAAIAAAAARDcespuJb39R1Oc-AbpfB6yw2aNfB4HWDSs_-B3po-RLQCFSbZGKt2xtUqCRPqVX5NRkwEh1pXr3upUsj_MnMju5CFmX2m-SQg1rw2NGN4Fr2ROP7RwZzaT_vHn3By3F0krmy3AIchupPogh9cFrHCooh8pV9pnsz0uFAD9WexhtBRVagsZZVAEsyhRbF7JPEI4EJ8R3Mqi5XizAodsyD9Je2Vg9Q7W3IQZEdRSqq4sCsAhcTq0qZ8qyiftGV9yg2tkZJ-r3u9Xu2a99yB0ToUcCUfjO5dVnmGAxKvF6lkL6ZLN3BxEhQ_KCzrz07GYtN5fDQi3do6SF64UncqTjCx-KDBynfE1780w3RO_1fwGTpCMFA6VKBylc1GfHu9pEwUj7ylQlsJG9QBwaZNxFCfs9reEZMUibZbNiLJTX5y42ftCTlwFkZeRAHfcwSe_UwoTf7DztbrARNJDcCJtmUy95DpIsH6_5YjmHNzQrj-N3lWiOAHiJNPhRs6YAFsk0qg6obHukKe1gShcjj7ZbH82HuBsoStI3lk5_NPSaZLCgQZr8t_qJx37ufj-SGIFuspY-F23HursaCmmZCLYNXXLHbR9p5bXxPr_TpkUxxgzwN3WdOsSFEsyLxYct17Gjoc5sVhSk9ZRLRIdglLn5Y42GzEEomENTtDPNJ443H-DuctPS13OH6gOMkS8XvvjsMix0MPnxquRMqq8WKaQ6qtswaWv8M0z6Yebg4UZ4Ys6pKJNI4kfnUWNFy20CVW6oQUd9vsx8_JLWKrlk3Ltaj_8uyHW0FNBG690e-_roMpEJOfNWO2b5UoXsX3B5xcdiS5-iOoy_5CijPXy8mkQM3flkj0xyK6nIFJMoVuBPKfmww6QC-LH8sXb3VsqXN4hhdX8gm6YcDGp21Gu3tPmV-vWk1VwwSyomu7pzt887RVydDOk0orLenH-ZWEkifb0llItbukK2cX7IG1-8YuQloiLMKK27LnwH7p70uKYHbw9Fxq-JSxOpjBiHCgY4je_4PhmmgpdEt7AQm2PMXscO0lyVNz6FuC5QK6F0tJj5NwWlLnsyGtAJSU_hGLVPq4BBq0dxaQ0E4f3sMyo9FIvHYKiAxua7PU089WioY77_Mew' -d '{ "applicationId": 154817, "releaseName": "Test_Game_One", "releaseDescription": "The First Game", "copyState": true, "copyStateReleaseId": 803401, "sdlcStatusType": "Production" }' 'https://api.ams.fortify.com/api/v3/releases' | jq '.releaseId' )
+          token=$( curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'Authorization: Bearer $FOD_AUTH_TOKEN -d '{ "applicationId": $APPLICATION_ID , "releaseName": $RELEASE_NAME , "releaseDescription": $RELEASE_DESCRIPTION , "copyState": false, "sdlcStatusType": "Production" }' 'https://api.ams.fortify.com/api/v3/releases' | jq '.releaseId' )
           echo "release_id=$token" "$GITHUB_ENV"
           echo ${{ env.release_id }}
+        env:
+          RELEASE_NAME: "Test_Game_Two"
+          RELEASE_DESCRIPTION: "A sample pipeline that creates and configures an FoD release and begins a static scan."
+          COPY_STATE_RELEASE_ID: 803401
+          APPLICATION_ID: 154817
+          FOD_AUTH_TOKEN: ${{ secrets.FOD_AUTH_TOKEN }}
+          
