--- a/.github/workflows/fod-sast-scan.yml
+++ b/.github/workflows/fod-sast-scan.yml
@@ -16,34 +16,33 @@ jobs:
         with:
           node-version: 4.2.x
       
-     # - name: Build Node.JS Application
-     #   run: |
-     #     npm install yo
-     #     npm install bower gulp nodemon
-     #     gulp build
+      - name: Build Node.JS Application
+        run: |
+          npm install yo
+          npm install bower gulp nodemon
+          gulp build
       
       - name: Create Fortify on Demand Application Release
+        id: creates_release
         # run: >
         #  token=$(
         #    curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' 
-        #    --header 'Authorization: Bearer <auth_token>' 
+        #    --header 'Authorization: Bearer $FOD_AUTH_TOKEN' 
         #    -d '{
-        #      "applicationId": <application_id>,
-        #      "releaseName": <release_name>,
-        #      "releaseDescription": <release_description>,
+        #      "applicationId": $APPLICATION_ID,
+        #      "releaseName": $RELEASE_NAME,
+        #      "releaseDescription": $RELEASE_DESCRIPTION,
         #      "copyState": true,
-        #      "copyStateReleaseId": <release_id_to_copy_state_from>,
+        #      "copyStateReleaseId": $COPY_STATE_RELEASE_ID,
         #      "sdlcStatusType": "Production"
         #    }'
         #    'https://api.ams.fortify.com/api/v3/releases'
         #    | jq '.releaseId'
         #  )
-        #  && echo "release_id=$token" >> "$GITHUB_ENV"
+        #  && echo "release_id=$token" >> "$GITHUB_OUTPUT"
         #  && echo ${{ env.release_id }}
-        run: |
-          token=$( curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'Authorization: Bearer $FOD_AUTH_TOKEN' -d '{ "applicationId": $APPLICATION_ID , "releaseName": $RELEASE_NAME , "releaseDescription": $RELEASE_DESCRIPTION , "copyState": false, "sdlcStatusType": "Production" }' 'https://api.ams.fortify.com/api/v3/releases' | jq '.releaseId' )
-          echo "release_id=$token" "$GITHUB_ENV"
-          echo ${{ env.release_id }}
+        run: |-
+          echo "release_id=$( curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' --header 'Authorization: Bearer $FOD_AUTH_TOKEN' -d '{ "applicationId": $APPLICATION_ID , "releaseName": $RELEASE_NAME , "releaseDescription": $RELEASE_DESCRIPTION , "copyState": false, "sdlcStatusType": "Production" }' 'https://api.ams.fortify.com/api/v3/releases' | jq '.releaseId' )" "$GITHUB_OUTPUT"
         env:
           RELEASE_NAME: "Test_Game_Two"
           RELEASE_DESCRIPTION: "A sample pipeline that creates and configures an FoD release and begins a static scan."
@@ -62,7 +61,9 @@ jobs:
             "technologyStackId": 16, \ 
             "performOpenSourceAnalysis": false, \ 
             "auditPreferenceType": "Automated", \ 
-          }' 'https://api.ams.fortify.com/api/v3/releases/803402/static-scans/scan-setup'
+          }' 'https://api.ams.fortify.com/api/v3/releases/$RELEASE_ID/static-scans/scan-setup'
+      - env:
+          RELEASE_ID: ${{ steps.creates_release.outputs.release_id }}
           
       - name: Use Java 11
         uses: actions/setup-java@v1
@@ -85,4 +86,4 @@ jobs:
           FOD_USER: ${{ secrets.FOD_USER }}
           FOD_PAT: ${{ secrets.FOD_PAT }}
           FOD_APPLICATION_ID: 154817
-          FOD_RELEASE_ID: ${{ env.release_id }}
+          FOD_RELEASE_ID: ${{ steps.creates_release.outputs.release_id }}
